feat: enable configuration of hosts with ENV variable in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,6 +14,8 @@ RUN git config --global url."https://".insteadOf git:// && \
 COPY . .
 RUN bundle install
 
+ENV allowed_hosts=${allowed_hosts}
+
 CMD ["./docker/init.sh"]
 
 EXPOSE 3000 3000
