--- a/docker/Dockerfile-local
+++ b/docker/Dockerfile-local
@@ -1,20 +1,21 @@
 FROM oydeu/soya-cli:alpha
-MAINTAINER "Christoph Fabianek" christoph@ownyourdata.eu
+LABEL org.opencontainers.image.authors="Christoph Fabianek <christoph@ownyourdata.eu>"
 
 USER root
 RUN mkdir -p /usr/src/app && \
 	apk add --no-cache libsodium-dev build-base git make gcc musl-dev jq npm openjdk8 bash curl libpq-dev sqlite-dev
 WORKDIR /usr/src/app
+ENV RAILS_ROOT=/usr/src/app/
 
-COPY Gemfile $WORKDIR
-RUN git config --global url."https://".insteadOf git:// && \
-	bundle install && \
-	bundle update
-
+COPY Gemfile Gemfile.lock $RAILS_ROOT
 COPY docker/local-gem/*.gem /tmp/
-RUN gem install /tmp/*.gem && \
-	gem cleanup oydid && \
-	bundle install
+RUN gem install bundler && \
+	gem update bundler && \
+	gem update --system && \
+	gem install /tmp/*.gem && \
+	bundle install && \
+	bundle update && \
+	gem cleanup
 
 COPY . .
 RUN bundle install && \
